# MixedReality-HolographicRemoting-Samples

./: .gitignore  .gitmodules  Cargo.toml  build.rs  run.sh  runtime.sh
remote/: App.cpp  CMakeLists.txt  DxUtility.cpp  OpenXrProgram.cpp  pch.h
remote/SampleShared/: CommandLineUtility.cpp  SampleWindowWin32.cpp
remote/XrUtility/: XrExtensions.h  XrMath.h  XrToString.h
src/: debug_pattern.wgsl  fullscreen.wgsl  main.rs  sample.wgsl
